# juzen

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindJellow.cmake
resources/: juzen.qrc
src/: Account.cpp  Account.h  AccountManager.cpp  AccountManager.h  MainWindow.cpp  MainWindow.h  XmlStreamHandler.cpp  XmlStreamHandler.h  main.cpp
src/Crypto/: QBlowfish.cpp  QBlowfish.h  QBlowfish_p.h
src/Resources/: IconFactory.cpp  IconFactory.h
src/Roster/: Contact.cpp  Contact.h  ContactPhoto.cpp  ContactPhoto.h  ContactResource.cpp  ContactResource.h  Roster.cpp  Roster.h
src/System/: AppInfo.cpp  AppInfo.h  Settings.cpp  Settings.h
src/Widgets/: AccountAddExistingWizardPage.cpp  AccountAddExistingWizardPage.h  AccountAddWizard.cpp  AccountAddWizard.h  AccountRegisterFormWizardPage.cpp  AccountRegisterFormWizardPage.h  AccountRegisterWizardPage.cpp  AccountRegisterWizardPage.h  ContactListDelegate.cpp  ContactListDelegate.h  ContactListModel.cpp  ContactListModel.h  ContactListView.cpp  ContactListView.h  DataFormFieldWidget.cpp  DataFormFieldWidget.h  DataFormWidget.cpp  DataFormWidget.h  WizardStartPage.cpp  WizardStartPage.h
